...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/download_permissions_text_view"
      style="@style/CaptionViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_screen_tertiary_background_color"
      android:paddingStart="@dimen/administrator_controls_download_permissions_view_download_permissions_text_view_padding_start"
      android:paddingTop="28dp"
      android:paddingEnd="@dimen/administrator_controls_download_permissions_view_download_permissions_text_view_padding_end"
      android:paddingBottom="20dp"
      android:text="@string/administrator_controls_fragment_download_permissions_text"
      android:textColor="@color/component_color_shared_active_text_color"
      app:layout_constraintBottom_toTopOf="@id/topic_update_on_wifi_constraint_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/topic_update_on_wifi_constraint_layout"
...
      <TextView
        android:id="@+id/topic_update_on_wifi_description_text_view"
        style="@style/Subtitle2ViewStart"
        android:layout_width="0dp"
        android:text="@string/administrator_controls_fragment_topic_update_on_wifi_description"
        android:textColor="@color/component_color_shared_secondary_3_text_color"
        app:layout_constraintEnd_toStartOf="@id/topic_update_on_wifi_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topic_update_on_wifi_title_text_view" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/topic_update_on_wifi_switch"
        android:layout_width="wrap_content"
...

    <View
      android:id="@+id/view_divider"
      android:layout_width="match_parent"
      android:layout_height="2dp"
      android:background="@color/component_color_shared_divider_color"
      app:layout_constraintBottom_toTopOf="@id/auto_update_topic_constraint_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/topic_update_on_wifi_constraint_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/auto_update_topic_constraint_layout"
...
      <TextView
        android:id="@+id/auto_update_topic_description_text_view"
        style="@style/Subtitle2ViewStart"
        android:layout_width="0dp"
        android:text="@string/administrator_controls_fragment_auto_update_topic_description"
        android:textColor="@color/component_color_shared_secondary_3_text_color"
        app:layout_constraintEnd_toStartOf="@id/auto_update_topic_switch"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auto_update_topic_title_text_view" />

      <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/auto_update_topic_switch"
...
