...

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
      android:id="@+id/account_actions_text_view"
      style="@style/CaptionViewStart"
      android:layout_width="match_parent"
      android:background="@color/component_color_shared_screen_tertiary_background_color"
      android:paddingStart="@dimen/administrator_control_account_actions_view_account_actions_text_view_padding_start"
      android:paddingTop="28dp"
      android:paddingEnd="@dimen/administrator_control_account_actions_view_account_actions_text_view_padding_end"
      android:paddingBottom="20dp"
      android:text="@string/administrator_controls_fragment_account_actions_label"
      android:textColor="@color/component_color_shared_active_text_color"
      app:layout_constraintBottom_toTopOf="@id/log_out_text_view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/log_out_text_view"
...
